WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177565
[Win64] Compile error, 'BasePtrs' is undefined.
https://bugs.webkit.org/show_bug.cgi?id=177565
Summary
[Win64] Compile error, 'BasePtrs' is undefined.
Per Arne Vollan
Reported
2017-09-27 13:34:18 PDT
DerivedSources\WebCore\JSBasicCredential.cpp(80): error C3083: 'PropertyAttribute': the symbol to the left of a '::' must be a type
Attachments
Patch
(1.03 KB, patch)
2017-09-27 17:02 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-09-27 13:35:11 PDT
<
rdar://problem/34695516
>
Per Arne Vollan
Comment 2
2017-09-27 16:59:02 PDT
(In reply to Per Arne Vollan from
comment #0
)
> DerivedSources\WebCore\JSBasicCredential.cpp(80): error C3083: > 'PropertyAttribute': the symbol to the left of a '::' must be a type
This error message is a bit misleading, since it is a consequence of a Win64 JSC build failure, where 'BasePtrs' is undefined.
Per Arne Vollan
Comment 3
2017-09-27 17:02:13 PDT
Created
attachment 322044
[details]
Patch
Mark Lam
Comment 4
2017-09-27 17:05:58 PDT
Comment on
attachment 322044
[details]
Patch r=me
Per Arne Vollan
Comment 5
2017-09-27 17:08:46 PDT
Comment on
attachment 322044
[details]
Patch Thanks for reviewing!
Don Olmstead
Comment 6
2017-09-27 18:09:55 PDT
Looks like we both were trying to get this sorted
https://bugs.webkit.org/show_bug.cgi?id=177569
WebKit Commit Bot
Comment 7
2017-09-27 18:29:17 PDT
Comment on
attachment 322044
[details]
Patch Clearing flags on attachment: 322044 Committed
r222593
: <
http://trac.webkit.org/changeset/222593
>
WebKit Commit Bot
Comment 8
2017-09-27 18:29:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug