[Win64] Compile error, 'BasePtrs' is undefined. https://bugs.webkit.org/show_bug.cgi?id=177565

Reviewed by Mark Lam.

Copy definition of 'BasePtrs' from bmalloc/GigaCage.h.

* wtf/Gigacage.h:


Canonical link: https://commits.webkit.org/193878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222593 268f45cc-cd09-0410-ab3c-d52691b4dbfc